changed time spam and the contact me

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                                             <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
                                           <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                            <i class="fab fa-github-alt fa-3x" aria-hidden="true"></i></a>&nbsp
+                                            <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
                                           <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                            <i class="fas fa-play fa-3x"></i></a>
+                                            <i class="fas fa-play-circle fa-3x"></i></a>
                                       </div>
                         </div>
                     </div>
@@ -160,9 +160,9 @@
                                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                                             <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
                                           <a class="portfolio-link" href="https://github.com/HTTP-Warriors/Stock-Byte-App" target="_blank">
-                                            <i class="fab fa-github-alt fa-3x" aria-hidden="true"></i></a>&nbsp
+                                            <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
                                           <a class="portfolio-link" href="https://stockbyte.herokuapp.com/" target="_blank">
-                                            <i class="fas fa-play fa-3x"></i></a>
+                                            <i class="fas fa-play-circle fa-3x"></i></a>
                                       </div>
                         </div>
                     </div>
@@ -179,9 +179,9 @@
                                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                                             <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
                                           <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                            <i class="fab fa-github-alt fa-3x" aria-hidden="true"></i></a>&nbsp
+                                            <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
                                           <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                            <i class="fas fa-play fa-3x"></i></a>
+                                            <i class="fas fa-play-circle fa-3x"></i></a>
                                       </div>
                         </div>
                     </div>
@@ -198,9 +198,9 @@
                               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                                 <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
                               <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                <i class="fab fa-github-alt fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
                               <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                <i class="fas fa-play fa-3x"></i></a>
+                                <i class="fas fa-play-circle fa-3x"></i></a>
                           </div>
                         </div>
                     </div>
@@ -217,9 +217,9 @@
                               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                                 <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
                               <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                <i class="fab fa-github-alt fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
                               <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                <i class="fas fa-play fa-3x"></i></a>
+                                <i class="fas fa-play-circle fa-3x"></i></a>
                             </div>
                         </div>
                     </div>
@@ -236,9 +236,9 @@
                               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
                                 <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
                               <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                <i class="fab fa-github-alt fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
                               <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                <i class="fas fa-play fa-3x"></i></a>
+                                <i class="fas fa-play-circle fa-3x"></i></a>
                             </div>
                         </div>
                     </div>
@@ -260,52 +260,56 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">My Resume</h3>
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
+                        <div class="timeline-image"><a  href="https://evealed.com/index.html" target="_blank"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg"  alt="" /></a></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>April 2020-Present</h4>
+                                <a  href="https://evealed.com/index.html" target="_blank"><h5>Evealed Inc.,</h5></a>
+                                <h6 class="subheading">Full stack web Developer</h6>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Gained experience working with MERN Applications.Created and connected a back-end and front-end with Nodejs, MongoDB, Express plus React app. Optimized quality in reading code.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
+                        <div class="timeline-image"><a  href="https://www.learnacademy.org/" target="_blank"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></a></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                              <h4>Nov 2019 - Apr 2020</h4>
+                              <a  href="https://www.learnacademy.org/" target="_blank"><h5>LEARN Academy</h5></a>
+                              <h6 class="subheading">Full stack web Developer</h6>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Accumulated near 500 hours of direct coding experience. At an accelerated rate of high-impact learning have built 10 applications at a professional level. Crated Apps with React framework using Webpack, Postgres Database and AWS infrastructure. Used latest hard technical skills that match the current technologies such as React, Rails, JavaScript, Sass. Worked in VCS Github on 2 project for a rapid project development.  Skill strengthening in delegation, team communication and conflict resolution in pair and mob programming as well as within a team. Rapid adaptation from on site to remote work.</p></div>
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="" /></div>
+                        <div class="timeline-image"><a  href="http://krongs.ru/" target="_blank"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="" /></a></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2012</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                              <h4>Sept 2017 - Nov 2019</h4>
+                              <a  href="http://krongs.ru/" target="_blank"><h5>Rosneftegaz Inc.,</h5></a>
+                              <h6 class="subheading">Project Lead</h6>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Initiated a new launch of automation program that reduced time in task processing by more than 50% Created and after delegated presentation on the use of the new program.  Managed a team who investigated problems and established project recovery plans for more than 30 gas stations and 10 petrol bases. Created rapid financial reporting systems from gas stations for faster data analysis for timely problem solving. Closely collaborated with project members to identify and quickly address unexpected situations.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
+                        <div class="timeline-image"><a  href="https://www.sdsu.edu/" target="_blank"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></a></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>July 2014</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                                <h4>Sept 2004 - May 2008</h4>
+                                <a  href="https://www.sdsu.edu/" target="_blank"><h5> San Diego State University</h5></a>
+                                <h6 class="subheading">BA in Psychology</h6>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">In order to keep up with fast renovating science field of psychology it was required that all the theory learned was carried out into hands on experience. Some of those activities were visiting after school hours detention groups.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <h4>Be Part<br />Of Our<br />Story!</h4>
+                            <h4>And this<br />is the<br />Story!</h4>
                         </div>
                     </li>
                 </ul>
@@ -313,7 +317,7 @@
         </section>
 
         <!-- Clients-->
-        <div class="py-5">
+        <!-- <div class="py-5">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-sm-6 my-3">
@@ -330,13 +334,13 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Contact Me</h2>
+                    <h3 class="section-subheading text-muted">Will be very happy to hear from you!</h3>
                 </div>
                 <form id="contactForm" name="sentMessage" novalidate="novalidate">
                     <div class="row align-items-stretch mb-5">
