added terms of privacy

--- a/index.html
+++ b/index.html
@@ -397,7 +397,14 @@
                             <a class="btn btn-dark btn-social mx-2" href="resume.pdf" target="_blank">
                               <i class="fa fa-file-pdf"></i></a>
                       </div>
-                    <div class="col-lg-4 text-lg-right"><a class="mr-3" style="color:black;" href="#!">Privacy Policy</a><style="color:black;"a href="#!">Terms of Use</a></div>
+                    <div class="col-lg-4 text-lg-right">
+                      <a class="mr-3" data-toggle="modal" href="#portfolioModal7" style="color:black;">Privacy Policy</a>
+                      <a data-toggle="modal" href="#portfolioModal7" style="color:black;">Terms of Use</a></div>
+
+
+
+
+
                 </div>
              </div>
           </div>
@@ -618,6 +625,35 @@
                                         <li>Date: January 2020</li>
                                         <li>Client: Window</li>
                                         <li>Category: Photography</li>
+                                    </ul>
+                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal 7-->
+        <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project Details Go Here-->
+                                    <h2 class="text-uppercase">Privacy Policy</h2>
+                                    <h2 class="text-uppercase">and</h2>
+                                    <h2 class="text-uppercase">Terms of Use</h2>
+                                    <p class="item-intro text-muted">Let us look at this very complex ideas of regulations at hand.</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/terms/01.jpg" alt="" />
+                                    <p>Dont worry everything is great</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/terms/02.jpg" alt="" />
+                                    <ul class="list-inline">
+                                        <li>Date: 2020</li>
+                                        <li>Category: Rems and Rules and regulations and Laws and everything else</li>
                                     </ul>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
                                 </div>
