--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+
+
+
+          <!-- <div class="timeline-image"><a  href="https://linkedin.com/in/sxena" target="_blank">
+            <img class="rounded-circle img-fluid" src="assets/img/projects/Alpha_20_087.jpeg"  alt="" /></a></div> -->
+
+
           <a class="navbar-brand js-scroll-trigger" href="#page-top">Xena Sitnikova</a>
             <div class="col-lg-4 my-3 my-sm-2">
                 <a class="btn btn-dark btn-social mx-1" href="resume.pdf" target="_blank">
@@ -38,8 +45,11 @@
                   <i class="fa fa-envelope"></i></a>
                 <a class="btn btn-dark btn-social mx-1" href="tel:+12129204987" target="_blank">
                   <i class="fa fa-phone"></i></a>
+
              </div>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1">
+                  </i></button>
+
 
                 <div class="container">
                     <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -57,11 +67,11 @@
 
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container">
-                <!-- <div class="masthead-subheading">Hello!</div> -->
-                <!-- <div class="masthead-heading text-uppercase">Lets Start</div> -->
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#skills">Let's begin</a>
-            </div>
+          <div class="container">
+              <!-- <div class="masthead-subheading">Hello!</div> -->
+              <!-- <div class="masthead-heading text-uppercase">Lets Start</div> -->
+              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#skills">Let's begin</a>
+          </div>
         </header>
 
 
@@ -69,6 +79,11 @@
         <section class="page-section" id="skills">
             <div class="container">
                 <div class="text-center">
+
+                    <div class="container">
+                      <img class="circular--square" src="assets/img/projects/Alpha_20_087.jpeg" />
+                    </div>
+
                     <h2 class="section-heading text-uppercase">Madd Skilzzz</h2>
                     <h3 class="section-subheading text-muted">Knowledge that has been aquired!!! Not stopping to master and learn new!</h3>
                 </div>
@@ -315,25 +330,9 @@
             </div>
         </section>
 
-        <!-- Clients-->
-        <!-- <div class="py-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/envato.jpg" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/designmodo.jpg" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/themeforest.jpg" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/creative-market.jpg" alt="" /></a>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+
+
+
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
@@ -400,61 +399,10 @@
                     <div class="col-lg-4 text-lg-right">
                       <a class="mr-3" data-toggle="modal" href="#portfolioModal7" style="color:black;">Privacy Policy</a>
                       <a data-toggle="modal" href="#portfolioModal7" style="color:black;">Terms of Use</a></div>
-
-
-
-
-
                 </div>
              </div>
           </div>
         </footer>
-
-
-
-
-
-                <!-- Blog-->
-                <!-- <section class="page-section bg-light" id="blog">
-                    <div class="container">
-                        <div class="text-center">
-                            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <div class="team-member">
-                                    <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
-                                    <h4>Kay Garland</h4>
-                                    <p class="text-muted">Lead Designer</p>
-                                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="team-member">
-                                    <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
-                                    <h4>Larry Parker</h4>
-                                    <p class="text-muted">Lead Marketer</p>
-                                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="team-member">
-                                    <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
-                                    <h4>Diana Petersen</h4>
-                                    <p class="text-muted">Lead Developer</p>
-                                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
-                        </div>
-                    </div>
-                </section> -->
-
-
-
 
 
         <!-- Portfolio Modals--><!-- Modal 1-->
