--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                         <p class="text-muted">AWS</p>
                         <p class="text-muted">Jenkins</p>
                         <p class="text-muted">Docker</p>
+                        <p class="text-muted">Heroku</p>
                     </div>
 
                 </div>
@@ -135,72 +136,106 @@
 
 
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="projects">
+
+
+        <section class="page-section bg-light" id="blog">
             <div class="container">
-
-
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Projects</h2>
-                    <h3 class="section-subheading text-muted">Some selected projects for show. A lot more is coming...</h3>
-                </div>
+                  <h2 class="section-heading text-uppercase">Projects</h2>
+
+                  <p class="section-subheading text-muted">(Details on abriviation:
+                      <a data-toggle="modal" href><i class="fas fa-info-circle fa-2x"></i>INFO</a>&nbsp
+                      <a data-toggle="modal" href><i class="fab fa-github fa-2x"></i>REPO</a>&nbsp
+                      <a data-toggle="modal" href><i class="fas fa-play-circle fa-2x"></i>PLAY</a>&nbsp)
+                  </p>
+
+
+                  <h3 class="section-subheading text-muted">Some selected projects for show. A lot more is coming...</h3>
+
+            </div>
+
+
+
 
 
                 <div class="row">
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/treasure.gif" alt="" /></a></div>
+                            <h4>Treasure Hunt Game</h4>
+                            <p class="text-muted">very simple HTML CSS</p>
 
-
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="portfolio-item">
-
-                                      <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-                                      <div class="portfolio-hover"><img class="img-fluid" src="assets/img/projects/treasure.gif" alt="" /></div></a>
-
-                                      <div  style="margin-top: 5px; text-align:center;">
-                                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-                                            <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
-                                          <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                            <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
-                                          <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                            <i class="fas fa-play-circle fa-3x"></i></a>
-                                      </div>
+                            <div  style="margin-top: 5px; text-align:center;">
+                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+                                  <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
+                                  <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
+                                  <i class="fas fa-play-circle fa-3x"></i></a>
+                            </div>
                         </div>
                     </div>
 
 
 
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="portfolio-item">
 
-                                      <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-                                      <div class="portfolio-hover"><img class="img-fluid" src="assets/img/projects/stock.gif" alt="" /></div></a>
-                                      <div  style="margin-top: 5px; text-align:center;">
-                                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-                                            <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
-                                          <a class="portfolio-link" href="https://github.com/HTTP-Warriors/Stock-Byte-App" target="_blank">
-                                            <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
-                                          <a class="portfolio-link" href="https://stockbyte.herokuapp.com/" target="_blank">
-                                            <i class="fas fa-play-circle fa-3x"></i></a>
-                                      </div>
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/stock.gif" alt="" /></a></div>
+                            <h4>StockByte</h4>
+                            <p class="text-muted">JS, Rails, CSS, API</p>
+
+                            <div  style="margin-top: 5px; text-align:center;">
+                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+                                  <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://github.com/HTTP-Warriors/Stock-Byte-App" target="_blank">
+                                  <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://stockbyte.herokuapp.com/" target="_blank">
+                                  <i class="fas fa-play-circle fa-3x"></i></a>
+                            </div>
                         </div>
                     </div>
 
 
 
-                    <div class="col-lg-4 col-sm-6 mb-4">
 
-                        <div class="portfolio-item">
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                          <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/portfolio/03-thumbnail.jpg" alt="" /></a></div>
+                            <h4>New Project</h4>
+                            <p class="text-muted">Lead Developer</p>
 
-                                      <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-                                      <div class="portfolio-hover"><img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="" /></div></a>
-                                      <div  style="margin-top: 5px; text-align:center;">
-                                          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-                                            <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
-                                          <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
-                                            <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
-                                          <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
-                                            <i class="fas fa-play-circle fa-3x"></i></a>
-                                      </div>
+                            <div  style="margin-top: 5px; text-align:center;">
+                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                                  <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://github.com/sxena/Find-Treasure" target="_blank">
+                                  <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
+                                <a class="portfolio-link" href="https://sxena.github.io/Find-Treasure/" target="_blank">
+                                  <i class="fas fa-play-circle fa-3x"></i></a>
+                            </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-8 mx-auto text-center">
+                      <p class="large text-muted">Plsease enjoy my little world.</p>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+        <!-- <section class="page-section bg-light" id="projects">
+            <div class="container">
+                <div class="row"> -->
 
 <!-- =================================================================================================== -->
 
@@ -262,7 +297,7 @@
 
                 </div>
             </div> -->
-        </section>
+        <!-- </section> -->
 
 
 
